<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/play_quote"
        android:id="@+id/iPlayQuote"
        app:showAsAction="never"/>
    <item android:title="@string/share_quote"
        android:id="@+id/iShareQuote"
        app:showAsAction="never"/>
    <item android:title="@string/share_quote_url"
        android:id="@+id/iShareQuoteUrl"
        app:showAsAction="never"/>
    <item android:title="@string/set_as"
        android:id="@+id/iSetAs">
        <menu>
            <item android:title="@string/set_as_ringtone"
                android:id="@+id/iSetAsRingtone"
                app:showAsAction="never"/>
            <item android:title="@string/set_as_notification"
                android:id="@+id/iSetAsNotification"
                app:showAsAction="never"/>
            <item android:title="@string/set_as_alarm"
                android:id="@+id/iSetAsAlarm"
                app:showAsAction="never"/>
        </menu>
    </item>
    <item android:title="@string/save_locally"
        android:id="@+id/iSaveLocally"
        app:showAsAction="never"/>
</menu>